fix(readme): wire all package managers and license through templates
The shared install partial only rendered nine of the configured package
managers; pub, spm, gleam, hex, zig, install.packages, cargo, and a
standalone gradle branch were missing, leaving Dart, Swift, Gleam, Zig,
R, and FFI READMEs with empty Package Installation sections. Maven and
Gradle output ignored package_name and pinned a stale 4.0.0 version; mix
hardcoded ~> 4.0. The license badge and License section in the shared
language_package template hardcoded MIT despite the workspace using
Elastic-2.0 (alef.toml [crates.scaffold] license = "Elastic-2.0").

Refactor partials/installation.md.jinja to a single per-PM dispatch loop
that consumes {{ version }} and {{ package_name }} (split on ":" for
Maven groupId/artifactId), add System Requirements branches for dart,
gleam, kotlin, swift, zig, r, ffi, switch the License line in
language_package.md to {{ license }}, and parameterise the License
shields.io badge in partials/badges.html.jinja using a "-" -> "--"
replace filter.

Regenerated all 16 READMEs against alef-readme; spot-checked Dart,
Gleam, Kotlin, Swift, Zig, R, FFI for non-empty install sections and
the full set for "License-Elastic--2.0" badges and "Elastic-2.0
License" prose lines.